Jerarquia de archivos scss + home responsive

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ main {
 }
 .home .b-home {
   position: absolute;
-  width: 100%;
+  width: calc(25em + 70vw);
   height: 100vh;
   background-image: url(../img/parallax.png);
   background-repeat: no-repeat;
@@ -82,15 +82,15 @@ main {
   background-position: center;
 }
 .home h1 {
-  font-size: 23vw;
+  font-size: calc(5em + 18vw);
   font-family: "Post No Bills Colombo Bold";
-  text-shadow: 1vw 0.4vw 0px rgba(255, 42, 195, 0.7);
+  text-shadow: 1vw 0.3vw 0px rgba(255, 42, 195, 0.7);
   z-index: 3;
 }
 .home p {
   position: absolute;
-  margin-top: 23vw;
-  font-size: 2vw;
+  margin-top: calc(7em + 9vw);
+  font-size: calc(0.8em + 1vw);
   font-family: "Post No Bills Colombo Light";
   letter-spacing: 0.2vw;
 }
@@ -108,29 +108,8 @@ main {
   background-color: #454545;
 }
 
-.projects {
-  background-color: #4D4D4D;
-}
-
 .contact {
   background-color: #454545;
-}
-
-.swiper-pagination {
-  left: 1%;
-  margin-top: 19vw;
-}
-.swiper-pagination .swiper-pagination-bullet {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 100%;
-  text-align: center;
-  line-height: 30px;
-  opacity: 1;
-  background: rgba(255, 255, 255, 0.2);
-}
-.swiper-pagination .swiper-pagination-bullet-active {
-  background: #FF2AC3;
 }
 
 header {
@@ -145,17 +124,34 @@ header {
   gap: 80vw;
 }
 .container-header .logo {
-  width: 8%;
+  width: calc(2em + 7vw);
   margin-left: 1.5rem;
 }
 .container-header .menu {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: calc(0.3em + 0.8vw);
 }
 .container-header .menu span {
   border-radius: 0.5rem;
-  width: 5rem;
-  height: 0.3rem;
+  width: calc(2em + 4vw);
+  height: 0.8vh;
   background-color: #FF2AC3;
+}
+
+.swiper-pagination {
+  left: 1%;
+  margin-top: calc(8em + 10vw);
+}
+.swiper-pagination .swiper-pagination-bullet {
+  width: calc(0.8em + 0.6vw);
+  height: 3vh;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 30px;
+  opacity: 1;
+  background: rgba(255, 255, 255, 0.2);
+}
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: #FF2AC3;
 }
