--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,6 +10,12 @@ $font-family:(
     khmer-light: "Khmer Light",
 );
 
+$font_size: (
+    font-xl: 23px
+
+);
+
+
 //Añadimos el mapa de fuentes
 @function fontFamily($family-value){
     @return map-get($font-family, $family-value );
