--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,10 +9,10 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 80vw;
+    gap: 80vw; //media queries
 
     .logo{
-        width: 8%;
+        width: calc(2em + 7vw);
         margin-left: 1.5rem;
     }
     
@@ -20,12 +20,12 @@ header {
         
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: calc(0.3em + 0.8vw);
     
         span{
             border-radius: 0.5rem;
-            width: 5rem;
-            height: 0.3rem;
+            width: calc(2em + 4vw);
+            height: 0.8vh;
             background-color: conf.$primary-color;
         }
     }
