--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,8 @@
 @forward "config" ;
 @forward "main" ;
-@forward "footer" ;
+@forward "home" ;
+@forward "about" ;
+@forward "skills" ;
+@forward "contact" ;
 @forward "header" ;
+@forward "pagination" ;
