--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,10 @@
 @forward "config" ;
-@forward "main" ;
+@forward "pagination" ;
 @forward "home" ;
 @forward "about" ;
 @forward "skills" ;
+@forward "projects" ;
 @forward "contact" ;
 @forward "header" ;
-@forward "pagination" ;
+@forward "main" ;
+
