--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.swiper-pagination {
+  left: 1%;
+  margin-top: calc(9em + 9vw);
 }
-
-html,
-body {
-  position: relative;
-  height: 100%;
+.swiper-pagination .swiper-pagination-bullet {
+  width: 1.5vw;
+  height: 3vh;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 30px;
+  opacity: 1;
+  background: rgba(255, 255, 255, 0.2);
 }
-
-body {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  color: white;
-  overflow-y: hidden;
-  font-family: "Khmer Light";
-  letter-spacing: 0.035rem;
-}
-
-main {
-  width: 100%;
-  height: 100%;
-}
-
-.home,
-.about,
-.skills,
-.projects,
-.contact {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-.home .title-section,
-.about .title-section,
-.skills .title-section,
-.projects .title-section,
-.contact .title-section {
-  display: flex;
-  flex-direction: column;
-  padding-top: 8rem;
-  padding-left: 10rem;
-}
-.home .title-section h1,
-.about .title-section h1,
-.skills .title-section h1,
-.projects .title-section h1,
-.contact .title-section h1 {
-  font-size: 5vw;
-}
-.home .title-section span,
-.about .title-section span,
-.skills .title-section span,
-.projects .title-section span,
-.contact .title-section span {
-  background-color: #FF2AC3;
-  height: 0.4rem;
-  width: 12rem;
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: #FF2AC3;
 }
 
 .home {
@@ -72,40 +24,139 @@ main {
   background-color: #454545;
   text-align: center;
 }
-.home .b-home {
+.home img {
   position: absolute;
-  width: calc(25em + 70vw);
-  height: 100vh;
-  background-image: url(../img/parallax.png);
-  background-repeat: no-repeat;
-  background-size: 38%;
-  background-position: center;
+  width: calc(0.5em + 1vw);
+  margin-top: calc(11em + 25vw);
 }
 .home h1 {
   font-size: calc(5em + 18vw);
   font-family: "Post No Bills Colombo Bold";
-  text-shadow: 1vw 0.3vw 0px rgba(255, 42, 195, 0.7);
+  text-shadow: 1vw 0.3rem 0px rgba(255, 42, 195, 0.7);
   z-index: 3;
 }
 .home p {
   position: absolute;
-  margin-top: calc(7em + 9vw);
+  margin-top: calc(8em + 8vw);
   font-size: calc(0.8em + 1vw);
   font-family: "Post No Bills Colombo Light";
   letter-spacing: 0.2vw;
 }
+.home .b-h1 {
+  position: absolute;
+  width: calc(20em + 70vw);
+  height: 100vh;
+  background-image: url(../img/b-h1.png);
+  background-repeat: no-repeat;
+  background-size: 38%;
+  background-position: center;
+}
 
 .about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   background-color: #4D4D4D;
 }
-.about p {
-  width: 40%;
-  font-size: 1.3vw;
-  margin-left: 10rem;
+.about .p-about {
+  grid-column: 1/2;
+  grid-row: 1;
+  width: 80%;
+  font-size: calc(0.6em + 0.6vw);
+  margin-top: 42%;
+  margin-left: 20%;
+}
+.about .b-img {
+  grid-column: 2/3;
+  position: absolute;
+  width: calc(20em + 70vw);
+  height: 100vh;
+  background-image: url(../img/b-img.png);
+  background-repeat: no-repeat;
+  background-size: 38%;
+  background-position: right;
+}
+.about .card-profile {
+  grid-column: 2/3;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-row: 1;
+}
+.about .card-profile .rrss {
+  margin-top: 10%;
+}
+.about .card-profile img.git {
+  margin-left: 40%;
+  width: calc(1em + 3vw);
+  height: calc(1em + 3vw);
+}
+.about .card-profile img.lin {
+  margin-left: 4%;
+  width: calc(1em + 3vw);
+  height: calc(1em + 3vw);
+}
+.about .card-profile img {
+  width: calc(4em + 17vw);
+  height: calc(4em + 17vw);
+  margin-left: 30%;
+  margin-top: -10%;
+  z-index: 5;
+}
+.about .card-profile .salute {
+  position: relative;
+  margin-top: 19%;
+  margin-left: -37%;
+}
+.about .card-profile .salute p {
+  position: absolute;
+  font-size: calc(0.7em + 1vw);
+  color: #FF2AC3;
+  margin-top: -4%;
+  margin-left: 34%;
+  z-index: 5;
+}
+.about .card-profile .salute img {
+  position: relative;
+  width: calc(5em + 13vw);
+  height: calc(3em + 3vw);
+  z-index: 2;
 }
 
 .skills {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   background-color: #454545;
+}
+.skills img {
+  width: 70%;
+  margin-top: 15%;
+  margin-left: 4%;
+}
+.skills .p-skills {
+  grid-column: 1/2;
+  grid-row: 1;
+  width: 60%;
+  font-size: calc(0.6em + 0.6vw);
+  margin-top: 40%;
+  margin-left: 20%;
+}
+.skills .interests {
+  grid-column: 1/2;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: "Khmer";
+  background-color: #21B1A7;
+  border-radius: 13px;
+  width: 60%;
+  height: 20vh;
+  padding: 3% 5% 20% 5%;
+  margin-top: 56%;
+  margin-left: 20%;
+}
+
+.projects {
+  background-color: #4D4D4D;
 }
 
 .contact {
@@ -124,7 +175,7 @@ header {
   gap: 80vw;
 }
 .container-header .logo {
-  width: calc(2em + 7vw);
+  width: calc(2em + 6vw);
   margin-left: 1.5rem;
 }
 .container-header .menu {
@@ -134,24 +185,68 @@ header {
 }
 .container-header .menu span {
   border-radius: 0.5rem;
-  width: calc(2em + 4vw);
-  height: 0.8vh;
+  width: calc(2em + 3vw);
+  height: 0.7vh;
   background-color: #FF2AC3;
 }
 
-.swiper-pagination {
-  left: 1%;
-  margin-top: calc(8em + 10vw);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.swiper-pagination .swiper-pagination-bullet {
-  width: calc(0.8em + 0.6vw);
-  height: 3vh;
-  border-radius: 100%;
-  text-align: center;
-  line-height: 30px;
-  opacity: 1;
-  background: rgba(255, 255, 255, 0.2);
+
+html,
+body {
+  height: 100%;
 }
-.swiper-pagination .swiper-pagination-bullet-active {
-  background: #FF2AC3;
+
+body {
+  color: white;
+  overflow-y: hidden;
+  font-family: "Khmer Light";
+}
+
+main {
+  width: 100%;
+  height: 100%;
+}
+
+.home,
+.about,
+.skills,
+.projects,
+.contact {
+  width: 100%;
+  height: 100vh;
+}
+
+.title-section {
+  grid-column: 1/2;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  padding-top: calc(4em + 4vw);
+  padding-left: 10vw;
+}
+.title-section h1 {
+  font-size: calc(1em + 5vw);
+}
+.title-section span {
+  background-color: #FF2AC3;
+  height: calc(0.2em + 0.2vw);
+  width: calc(2em + 8vw);
+}
+
+@media (max-width: 767px) {
+  .container-header {
+    gap: 60vw;
+  }
+  .swiper-pagination {
+    left: 3%;
+  }
+  .swiper-pagination .swiper-pagination-bullet {
+    width: 3vw;
+    height: 2vh;
+  }
 }
