--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,10 @@
+
+
 $primary-color: #FF2AC3;
 $secundary-color:#454545;
-$terciary-color: #4D4D4D;
+$secundary-light-color: #4D4D4D;
+$acento-color: #29D7CC;
+
 
 $font-family:(
     colombo: "Post No Bills Colombo",
