--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -15,6 +15,7 @@ body {
     
     color: white;
     overflow-y: hidden;
+    overflow-x: hidden;
     font-family: conf.fontFamily(khmer-light);
 }
 
