--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -1,10 +1,11 @@
 @use "config" as conf;
 
 .swiper-pagination{
-    
+
+    width: 3%;
     left: 1%; 
     margin-top: calc(9em + 9vw); 
-
+    
     .swiper-pagination-bullet {
         
         width: 1.5vw;
