--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,97 @@
 }
 
 .contact {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   background-color: #454545;
+}
+.contact .p-contact {
+  grid-column: 1/2;
+  grid-row: 1;
+  width: 60%;
+  font-size: calc(0.6em + 0.6vw);
+  margin-top: 40%;
+  margin-left: 20%;
+}
+.contact .b-contact {
+  grid-column: 2/3;
+  position: absolute;
+  width: calc(20em + 70vw);
+  height: 100vh;
+  background-image: url(../img/b-form.png);
+  background-repeat: no-repeat;
+  background-size: 48%;
+  background-position: right;
+}
+.contact form {
+  width: 60%;
+  grid-column: 2/3;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7em;
+  margin-top: 33%;
+  margin-left: 10%;
+  z-index: 4;
+}
+.contact form label {
+  display: flex;
+  flex-direction: row;
+  gap: 0.7em;
+}
+.contact form input::-moz-placeholder, .contact form textarea::-moz-placeholder {
+  font-size: 1em;
+  font-family: "Khmer";
+}
+.contact form input:-ms-input-placeholder, .contact form textarea:-ms-input-placeholder {
+  font-size: 1em;
+  font-family: "Khmer";
+}
+.contact form input::placeholder, .contact form textarea::placeholder {
+  font-size: 1em;
+  font-family: "Khmer";
+}
+.contact form input.name {
+  width: 100%;
+  height: 6vh;
+}
+.contact form input.email {
+  width: 100%;
+  height: 6vh;
+}
+.contact form input.subject {
+  width: 100%;
+  height: 6vh;
+}
+.contact form input, .contact form textarea {
+  font-size: 1em;
+  font-family: "Khmer";
+  padding: 1em 1em 1em 1em;
+  border-radius: 0.4em;
+  border: 1.5px solid #29D7CC;
+}
+.contact form button {
+  border: 0;
+  font-size: 1em;
+  color: white;
+  font-family: "Khmer";
+  background-color: #29D7CC;
+  border-radius: 0.4em;
+  width: 25%;
+  height: 8%;
+}
+.contact .credits {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  font-size: 0.8em;
+  margin-left: 20%;
+  margin-top: 7%;
+}
+.contact .credits span {
+  border-radius: 0.5em;
+  width: 23vw;
+  height: 0.5vh;
+  background-color: #29D7CC;
 }
 
 header {
