--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -4,46 +4,52 @@
     
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(5,1fr);
+    justify-items: center;
     background-color: conf.$secundary-light-color;
 
     .p-about{
         grid-column: 1 / 2;
-        grid-row: 1;
+        grid-row: 3 / 4;
         width: 80%;
-        font-size: calc(0.6em + 0.6vw);
-        margin-top: 42%;
-        margin-left: 20%;
+        margin-top: 2vw;
+        font-size: conf.fontSize(font-body);
+        justify-self: end;
     }
 
     .b-img {
         grid-column: 2 / 3;
+        grid-row: 2 / 5;
+        
         position: absolute;
         width: calc(20em + 70vw);
         height: 100vh;
         background-image: url(../img/b-img.png);
         background-repeat: no-repeat;
         background-size: 38%;
-        background-position: right;
+        background-position: 93%;
       }
 
     .card-profile{
         grid-column: 2 / 3;
-        display: grid;
-        grid-template-rows: repeat(3,1fr);
-        grid-row: 1;
+        grid-row: 2 / 6;       
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1em;
 
         .rrss{
-            margin-top: 10%;
+            display: flex;
+            gap: 1em;
         }
 
         img.git{
-            margin-left: 40%;
             width: calc(1em + 3vw);
             height: calc(1em + 3vw);
         }
 
         img.lin{
-            margin-left: 4%;
             width: calc(1em + 3vw);
             height: calc(1em + 3vw);
         }
@@ -51,32 +57,22 @@
         img{
             width: calc(4em + 17vw);
             height: calc(4em + 17vw);
-            margin-left: 30%;
-            margin-top: -10%;
             z-index: 5;
         }
 
-        .salute{
-            position: relative;
-            margin-top: 19%;
-            margin-left: -37%;
+        
+        p{
+            background-color: #B4B4B4;
+            text-align: center;
+            width: 70%;
+            padding: 4%;
+            border-radius: 0.5em;
+            font-size: calc(0.7em + 1vw);
+            color: conf.$primary-color;
+            z-index: 5;
+            margin-right: 100%;
             
-            p{
-                position: absolute;
-                font-size: calc(0.7em + 1vw);
-                color: conf.$primary-color;
-                margin-top: -4%;
-                margin-left: 34%;
-                z-index: 5;
-                
-            }
-
-            img{
-                position: relative;
-                width: calc(5em + 13vw);
-                height: calc(3em + 3vw);
-                z-index: 2;
-            }
         }
+        
     }
 }
