--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -38,15 +38,14 @@ main {
 
 .title-section{
     grid-column: 1 / 2;
-    grid-row: 1;
-    
+    grid-row: 2 / 3;
+    width: 60%;
     display: flex;
     flex-direction: column;
-    padding-top: calc(4em + 4vw);
-    padding-left: 10vw;
 
     h1{
         font-size: calc(1em + 5vw);
+
     }
 
    span{
@@ -57,7 +56,6 @@ main {
 }
 
 @include conf.mobile{
-
     //Header
     .container-header{
         gap: 60vw; 
@@ -77,10 +75,60 @@ main {
 
     .about{
 
-      
+        display: grid;
+        grid-template-rows: repeat(2,1fr);
 
+        .p-about{
+            grid-row: 2 / 3;
+            grid-column: 1 / 3;
+            margin-left: 10%;
+            margin-top: -40%;
+        }
+
+        .b-img {
+
+            grid-column: 1 / 3;
+            grid-row: 1 / 2;
+            background-size: 35%;
+            background-position: 38vw 20vw;
+
+        }
+
+        .card-profile{
+
+            grid-column: 1 / 3;
+            grid-row: 1 / 2;
+            margin-top: 35%;
+
+            .rrss{
+                margin-top: -23%;
+                margin-left: 3%;
+            }
+    
+            img.git{
+                margin-left: 10%;
+            }
+    
+            img.lin{
+                margin-left: 2%;
+            }
+
+            img{
+                margin-left: 50%;
+                margin-top: -25%;
+            }
+
+            .salute{
+                p{
+                    margin-left: 34%;
+                }
+            }
+        }
+
+        
     }
 
+    
     
 }
 
