--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,9 @@
   grid-column: 1/2;
   grid-row: 3/4;
   width: 80%;
-  margin-top: 2vw;
   font-size: calc(0.6em + 0.6vw);
   justify-self: end;
+  margin-top: 2vw;
 }
 .about .b-img {
   grid-column: 2/3;
@@ -81,7 +81,8 @@
 }
 .about .card-profile {
   grid-column: 2/3;
-  grid-row: 2/6;
+  grid-row: 2/4;
+  align-self: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -146,15 +147,19 @@
   font-family: "Khmer";
   background-color: #21B1A7;
   border-radius: 13px;
-  width: 60%;
-  height: 20vh;
-  padding: 3% 5% 20% 5%;
+  padding: 3% 20% 5% 5%;
 }
 
 .projects {
   background-color: #4D4D4D;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  justify-items: center;
 }
 .projects .swiper-projects {
+  grid-column: 1/3;
+  grid-row: 3/4;
   margin: 0 auto;
   max-width: 300px;
   margin-top: 7%;
@@ -193,20 +198,6 @@
   left: 14%;
   color: rgb(255, 255, 255);
 }
-.projects .swiper-pagination-projects .swiper-pagination-bullet-projects {
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 20px;
-  font-size: 12px;
-  color: #000;
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.2);
-}
-.projects .swiper-pagination-projects .swiper-pagination-bullet-projects.swiper-pagination-bullet-projects-active {
-  color: #fff;
-  background: linear-gradient(45deg, rgb(246, 146, 89), rgb(241, 105, 117));
-}
 
 .contact {
   display: grid;
@@ -217,11 +208,10 @@
 }
 .contact .p-contact {
   grid-column: 1/2;
-  grid-row: 1;
+  grid-row: 3/4;
   width: 60%;
+  margin-top: 2vw;
   font-size: calc(0.6em + 0.6vw);
-  margin-top: 40%;
-  margin-left: 20%;
 }
 .contact .b-contact {
   grid-column: 2/3;
@@ -236,11 +226,10 @@
 .contact form {
   width: 60%;
   grid-column: 2/3;
+  grid-row: 3/5;
   display: flex;
   flex-direction: column;
   gap: 0.7em;
-  margin-top: 33%;
-  margin-left: 10%;
   z-index: 4;
 }
 .contact form label {
@@ -290,12 +279,13 @@
   height: 8%;
 }
 .contact .credits {
+  grid-column: 1/2;
+  grid-row: 5/6;
   display: flex;
   flex-direction: column;
   gap: 1em;
   font-size: 0.8em;
-  margin-left: 20%;
-  margin-top: 7%;
+  margin-left: -12%;
 }
 .contact .credits span {
   border-radius: 0.5em;
@@ -340,6 +330,7 @@ header {
 html,
 body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -366,6 +357,7 @@ main {
 .title-section {
   grid-column: 1/2;
   grid-row: 2/3;
+  align-self: center;
   width: 60%;
   display: flex;
   flex-direction: column;
