--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -12,9 +12,9 @@
         grid-column: 1 / 2;
         grid-row: 3 / 4;
         width: 80%;
-        margin-top: 2vw;
         font-size: conf.fontSize(font-body);
         justify-self: end;
+        margin-top: 2vw;
     }
 
     .b-img {
@@ -32,8 +32,8 @@
 
     .card-profile{
         grid-column: 2 / 3;
-        grid-row: 2 / 6;       
-        
+        grid-row: 2 / 4;       
+        align-self: center;
         display: flex;
         flex-direction: column;
         align-items: center;
