--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -9,11 +9,10 @@
 
     .p-contact{
         grid-column: 1 / 2;
-        grid-row: 1;
+        grid-row: 3 / 4;
         width: 60%;
+        margin-top: 2vw;
         font-size: calc(0.6em + 0.6vw);
-        margin-top: 40%;
-        margin-left: 20%;
     }
 
     .b-contact {
@@ -30,11 +29,10 @@
       form{
         width: 60%;
         grid-column: 2 / 3;
+        grid-row: 3 /  5;
         display: flex;
         flex-direction: column;
         gap: 0.7em;
-        margin-top: 33%;
-        margin-left: 10%;
         z-index: 4;
         
 
@@ -87,13 +85,14 @@
 
 
       .credits{
+        grid-column: 1 / 2;
+        grid-row: 5 / 6;
         display: flex;
         flex-direction: column;
         gap: 1em;
         font-size: 0.8em;
-        margin-left: 20%;
-        margin-top: 7%;
-
+        margin-left: -12%;
+        
         span{
             border-radius: 0.5em;
             width: 23vw;
