--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -9,6 +9,7 @@
 html,
 body {
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -39,6 +40,7 @@ main {
 .title-section{
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+    align-self:center;
     width: 60%;
     display: flex;
     flex-direction: column;
