--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -3,8 +3,15 @@
 .projects {
     background-color: conf.$secundary-light-color;
 
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(5,1fr);
+    justify-items: center;
    
     .swiper-projects {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        
         margin: 0 auto;
         max-width: 300px;
         margin-top: 7%;
@@ -51,23 +58,6 @@
           
       }
     
-    .swiper-pagination-projects{
-
-        .swiper-pagination-bullet-projects {
-            width: 20px;
-            height: 20px;
-            text-align: center;
-            line-height: 20px;
-            font-size: 12px;
-            color:#000;
-            opacity: 1;
-            background: rgba(0,0,0,0.2);
-            
-            &.swiper-pagination-bullet-projects-active {
-                color:#fff;
-                background: linear-gradient(45deg, rgb(246, 146, 89), rgb(241, 105, 117));
-            }
-        }
-    }
+    
     
 }
