--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -40,21 +40,42 @@ main {
 .title-section{
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    align-self:center;
+    align-self: center;
+    
+
     width: 60%;
     display: flex;
     flex-direction: column;
+
 
     h1{
         font-size: calc(1em + 5vw);
 
     }
 
-   span{
+   .line{
+        
+        transform: translateX(-20em);
         background-color: conf.$primary-color;
         height: calc(0.2em + 0.2vw);
         width: calc(2em + 8vw);
+        
    } 
+
+   .line-animation{
+        animation: transicion 1s steps(50) 1 normal both;
+   }
+   
+   @keyframes transicion {
+    from {
+        transform: translateX(-20em);
+    }
+    
+    to {
+        transform: translateX(0);
+    }
+  }
+
 }
 
 @include conf.mobile{
