--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -17,11 +17,20 @@
     }
 
     h1{
+        position: absolute;
         font-size: calc(5em + 18vw);
         font-family: conf.fontFamily(colombo-bold);
-        text-shadow: 1vw 0.3rem 0px rgba(255, 42, 195, 0.70);
+        //text-shadow: 1vw 0.3rem 0px rgba(255, 42, 195, 0.70);
         z-index: 3;
     }
+
+    .h1-2{
+        margin-left: 0.1em;
+        margin-top: 10px;
+        color: conf.$primary-color;
+    }
+
+
 
     p{
         position: absolute;
@@ -41,5 +50,20 @@
         background-position: center;
       }
 
-    
+       .h1-2 {
+        animation: neon 4s  ease infinite;
+       
+      }
+      
+      @keyframes neon {
+        0%,
+        100% {
+          text-shadow: 0 0 1vw white;
+          color:rgb(88, 88, 88);
+        }
+        50% {
+          text-shadow: 0 0 .5vw  conf.$primary-color;
+          color: conf.$primary-color;
+        }
+      } 
 }
