--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -17,7 +17,9 @@
         background: rgba(255, 255, 255, 0.2);
     }
     
-    
+    &.close{
+        display: none;
+    }
     .swiper-pagination-bullet-active {
         background: conf.$primary-color;
     }
